modified contact details

--- a/WebApplication2/Views/Home/Contact.cshtml
+++ b/WebApplication2/Views/Home/Contact.cshtml
@@ -9,6 +9,8 @@
     Redmond, WA 98052-6399<br />
     <abbr title="Phone">P:</abbr>
     455646564
+    <h1>Title here</h1>
+    <p>Description and details will be here</p>
 </address>
 
 <address>
