--- a/WebApplication2/Views/Home/Contact.cshtml
+++ b/WebApplication2/Views/Home/Contact.cshtml
@@ -11,6 +11,7 @@
     455646564
     <h1>Title here</h1>
     <p>Description and details will be here</p>
+    <p>sdfsdfsd fsdf</p>
 </address>
 
 <address>
