--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -10,17 +10,26 @@
 }
     ViewBag.Title = "Welcome to Home Page";
 <div class="container">
+    @*<div class="col-lg-3 col-md-3 col-sm-6">
+        <div class="thumbnail" >
+            <img src="~/Images/1.jpg" alt="" style=""/>
+            <div class="caption">
+                <h3>title</h3>
+                <p><a href="#" class="btn btn-primary" role="button">Pakcage Details</a></p>
+            </div>
+        </div>
+    </div>*@
     @foreach (var pkg in Model.packages)
     {
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 " style="padding-bottom:50px">
-                <a href="#" class="thumbnail">
-                    <img src="@Url.Content(pkg.images.First().imagePath)" alt="">
-                </a>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <div class="thumbnail">
+                <img src="@Url.Content(pkg.images.First().imagePath)" alt="" >
                 <div class="caption">
                     <h3>@pkg.packageName</h3>
                     <p>@pkg.packageDescription</p>
 
                     <p><a href="#" class="btn btn-primary" role="button">Package Details</a> </p>
+                </div>
             </div>
         </div>
     }
